Change names of the Java 9+ Ant targets [2839]
Pegging the names of things to specific Java versions was getting
inconsistent (in some places it's 9, 9+, 11, 13, etc). The most
problematic change for us was the Java Platform Module System, aka JPMS.

So we'll simply use "JPMS" where/when relevant!

jar.runlarge9 -> jar.runlarge.jpms
jar.runscript9 -> jar.runscript.jpms
debug.runlarge9 -> debug.runlarge.jpms

--- a/build.xml
+++ b/build.xml
@@ -783,7 +783,7 @@
     </java>
   </target>
 
-  <target name="jar.runlarge9" depends="jar" description="Build and run McIDAS-V application (large memory)">
+  <target name="jar.runlarge.jpms" depends="jar" description="Build and run McIDAS-V application (large memory)">
     <java fork="true" maxmemory="${run.largeheap}" dir="${dist.dir}" jar="${dist.dir}/mcidasv-${mcv.version}.jar">
       <classpath refid="app.classpath" />
       <assertions refid="mcv.assertions"/>
@@ -895,7 +895,7 @@
     </java>
   </target>
 
-    <target name="jar.runscript9" depends="jar" description="Build and run McIDAS-V application (large memory)">
+    <target name="jar.runscript.jpms" depends="jar" description="Build and run McIDAS-V application (large memory)">
         <java fork="true" maxmemory="${run.largeheap}" dir="${dist.dir}" jar="${dist.dir}/mcidasv-${mcv.version}.jar">
             <classpath refid="app.classpath" />
             <assertions refid="mcv.assertions"/>
@@ -1050,7 +1050,7 @@
     </java>
   </target>
 
-    <target name="debug.runlarge9" depends="jar" description="Build and run McIDAS-V application (large memory)">
+    <target name="debug.runlarge.jpms" depends="jar" description="Build and run McIDAS-V application (large memory)">
         <java classname="${app.mainclass}" fork="true" maxmemory="${run.largeheap}">
             <classpath refid="app.classpath" />
             <assertions refid="mcv.assertions"/>
