--- a/build.xml
+++ b/build.xml
@@ -202,8 +202,8 @@
     <property name="juniversalchardet.version" value="2.3.0" />
     <property name="jsattrack.version" value="4.1.11" />
     <property name="commons-httpclient.version" value="3.1" />
-    <property name="idv.version" value="5.6u1" />
-    <property name="ncidv.version" value="4.6.13-SNAPSHOT" />
+    <property name="idv.version" value="5.7" />
+    <property name="ncidv.version" value="4.6.15-SNAPSHOT" />
     <property name="visad.version" value="2.0-SNAPSHOT" />
 <!--    <property name="jansi.version" value="1.18" />-->
 
