Modify build.xml to pass idv.version to install4j
Prior to this commit the IDV version number would have to be updated in
both build.xml and mcidasv.install4j. The problem is that when the JARs
are updated, there's *generally* no need to touch
mcidasv.install4j...and so it's easy to forget about mcidasv.install4j.

This commit just passes Ant's "idv.version" property to install4j via
the command line invocation in the "installers" target. It also updates
mcidasv.install4j's "IDV_VERSION" variable just to be thorough.

[2896]

--- a/build.xml
+++ b/build.xml
@@ -1456,6 +1456,8 @@
     <!-- Make the installers with install4j -->
     <target name="installers" depends="installer_custom_code" description="Make the installers with install4j">
         <exec dir="${release.dir}" executable="${install4jc.bin}" failifexecutionfails="true">
+            <arg value="-D" />
+            <arg value="IDV_VERSION=${idv.version}" />
             <arg value="mcidasv.install4j" />
         </exec>
     </target>
