--- a/build.xml
+++ b/build.xml
@@ -1518,10 +1518,10 @@
     <!-- and mcidasv.jar. mcidasv-alljars.zip contains all McIDAS-V JARs.    -->
     <target name="archive" depends="ncidv.nolog, external.cleanup, jar" description="Build McIDAS-V JARs and create mcidasv-tiny.zip and mcidasv-alljars.zip.">
         <!-- zip task defaults to overwriting destfile.  -->
-        <zip destfile="${dist.dir}/mcidasv-tiny.zip">
+        <zip destfile="${dist.dir}/mcidasv-tiny.zip" zip64mode="always">
             <fileset dir="${dist.dir}" includes="${local-idv.jarname}, ${app.jarname}"/>
         </zip>
-        <zip destfile="${dist.dir}/mcidasv-alljars.zip">
+        <zip destfile="${dist.dir}/mcidasv-alljars.zip" zip64mode="always">
             <fileset dir="${dist.dir}" includes="*.jar"/>
         </zip>
     </target>
