--- a/build.xml
+++ b/build.xml
@@ -232,8 +232,8 @@
     <property name="jsattrack.version" value="4.2.3" />
     <property name="commons-httpclient.version" value="3.1" />
     <property name="jcodec.version" value="0.2.6-SNAPSHOT" />
-    <property name="idv.version" value="5.7" />
-    <property name="ncidv.version" value="4.6.15-SNAPSHOT" />
+    <property name="idv.version" value="6.0u2" />
+    <property name="ncidv.version" value="5.4.1" />
     <property name="visad.version" value="2.0-SNAPSHOT" />
     <property name="flatlaf.version" value="3.2.5" />
     <property name="batik.version" value="1.17" />
