Updating default catalogs [3005]
Adding NCEI and AOS catalogs to Gridded Data > Remote and General > Catalogs chooser.  Remove Miami catalog from Gridded Data > Remote as it no longer has realtime data.

--- a/edu/wisc/ssec/mcidasv/resources/mcidasv.properties
+++ b/edu/wisc/ssec/mcidasv/resources/mcidasv.properties
@@ -340,7 +340,7 @@ idv.ui.lookandfeel = javax.swing.plaf.metal.MetalLookAndFeel
 ##Semicolon delimited list of urls pointing to thredds catalogs
 idv.data.catalog.list.proplabel=Catalogs
 idv.data.catalog.list.propdelimiter=;
-idv.data.catalog.list=https://www.ssec.wisc.edu/mcidas/software/v/catalog.xml
+idv.data.catalog.list=https://www.ssec.wisc.edu/mcidas/software/v/catalog.xml;https://www.ncei.noaa.gov/thredds/catalog.xml;https://thredds.aos.wisc.edu/thredds/catalog/catalog.xml
 idv.data.catalog.list.merge=true
 idv.data.catalog.list.merge.proplabel=Merge Catalogs
 idv.data.catalog.list.delete.proplabel=Catalogs To Remove
@@ -349,9 +349,9 @@ idv.data.catalog.list.delete= http://motherlode.ucar.edu/dods/catalog.xml;http:/
 
 
 ##Semicolon delimited list of urls pointing to grid catalogs
-idv.data.grid.list=https://www.ssec.wisc.edu/mcidas/software/v/threddsRTModels.xml;https://weather.rsmas.miami.edu/thredds/catalog.xml
+idv.data.grid.list=https://www.ssec.wisc.edu/mcidas/software/v/threddsRTModels.xml;https://www.ncei.noaa.gov/thredds/model/model.xml;https://thredds.aos.wisc.edu/thredds/catalog/idd/forecastModels.xml
 ## Semicolon delimited list of URLs that have been removed from the "idv.data.grid.list" property
-idv.data.grid.list.delete=http://thredds.cise-nsf.gov:8080/thredds/idv/models.xml;http://motherlode.ucar.edu:8080/thredds/idv/models.xml;http://www.unidata.ucar.edu/georesources/threddsRtModels_1.xml;http://atm.ucar.edu/thredds/idd/forecastModels.xml;http://atm.ucar.edu/thredds/idd/forecastProdsAndAna.xml;http://www.unidata.ucar.edu/georesources/threddsRtModels.xml;http://www.ssec.wisc.edu/mcidas/software/v/threddsRtModels.xml
+idv.data.grid.list.delete=http://thredds.cise-nsf.gov:8080/thredds/idv/models.xml;http://motherlode.ucar.edu:8080/thredds/idv/models.xml;http://www.unidata.ucar.edu/georesources/threddsRtModels_1.xml;http://atm.ucar.edu/thredds/idd/forecastModels.xml;http://atm.ucar.edu/thredds/idd/forecastProdsAndAna.xml;http://www.unidata.ucar.edu/georesources/threddsRtModels.xml;http://www.ssec.wisc.edu/mcidas/software/v/threddsRtModels.xml;https://weather.rsmas.miami.edu/thredds/catalog.xml
 
 
 ##This defines extra netcdf convention handling classes
