--- a/build.xml
+++ b/build.xml
@@ -206,6 +206,8 @@
     <property name="ncidv.version" value="4.6.15-SNAPSHOT" />
     <property name="visad.version" value="2.0-SNAPSHOT" />
     <property name="flatlaf.version" value="2.6" />
+    <property name="batik.version" value="1.16" />
+
 <!--    <property name="jansi.version" value="2.4.0" />-->
 
     <!-- note that the J3D JARs available from http://jogamp.org/deployment/java3d/
@@ -216,8 +218,8 @@
     <!-- The CLASSPATH specified within McV's manifest 
          Note: if you're going to modify this property, be sure to make similar
          modifications to the "mcv.libs" fileset. -->
-<!--    <property name="jar.base.classpath" value="jansi-${jansi.version}.jar ${userguide.jarname} ncIdv-${ncidv.version}.jar external-${idv.version}.jar jogamp-all-${jogamp.version}.jar sysout-over-slf4j-${sysout.version}.jar miglayout-core-${miglayout.version}.jar miglayout-swing-${miglayout.version}.jar eventbus-${eventbus.version}.jar logback-core-${logback.version}.jar logback-classic-${logback.version}.jar log4j-over-slf4j-${slf4j.version}.jar slf4j-api-${slf4j.version}.jar ${local-idv.jarname}commons-math3-${commons-math.version}.jar rsyntaxtextarea-${rsyntaxtextarea.version}.jar jul-to-slf4j-${slf4j.version}.jar local-visad-${idv.version}.jar visad-${visad.version}.jar idv-${idv.version}.jar ${userguide.jarname} JSatTrak-${jsattrack.version}.jar swingx-common-${swingx.version}.jar j3dcore-${java3d.version}.jar j3dutils-${java3d.version}.jar vecmath-${java3d.version}.jar jython-standalone-${jython.version}.jar juniversalchardet-${juniversalchardet.version}.jar commons-httpclient-${commons-httpclient.version}.jar jcodec-javase-${jcodec.version}.jar jcodec-${jcodec.version}.jar flatlaf-${flatlaf.version}.jar flatlaf-extras-${flatlaf.version}.jar flatlaf-intellij-themes-${flatlaf.version}.jar flatlaf-swingx-${flatlaf.version}.jar" />-->
-    <property name="jar.base.classpath" value="${userguide.jarname} ncIdv-${ncidv.version}.jar external-${idv.version}.jar jogamp-all-${jogamp.version}.jar sysout-over-slf4j-${sysout.version}.jar miglayout-core-${miglayout.version}.jar miglayout-swing-${miglayout.version}.jar eventbus-${eventbus.version}.jar logback-core-${logback.version}.jar logback-classic-${logback.version}.jar log4j-over-slf4j-${slf4j.version}.jar slf4j-api-${slf4j.version}.jar ${local-idv.jarname}commons-math3-${commons-math.version}.jar rsyntaxtextarea-${rsyntaxtextarea.version}.jar jul-to-slf4j-${slf4j.version}.jar local-visad-${idv.version}.jar visad-${visad.version}.jar idv-${idv.version}.jar ${userguide.jarname} JSatTrak-${jsattrack.version}.jar swingx-common-${swingx.version}.jar j3dcore-${java3d.version}.jar j3dutils-${java3d.version}.jar vecmath-${java3d.version}.jar jython-standalone-${jython.version}.jar juniversalchardet-${juniversalchardet.version}.jar commons-httpclient-${commons-httpclient.version}.jar jcodec-javase-${jcodec.version}.jar jcodec-${jcodec.version}.jar flatlaf-${flatlaf.version}.jar flatlaf-extras-${flatlaf.version}.jar flatlaf-intellij-themes-${flatlaf.version}.jar flatlaf-swingx-${flatlaf.version}.jar" />
+<!--    <property name="jar.base.classpath" value="jansi-${jansi.version}.jar ${userguide.jarname} ncIdv-${ncidv.version}.jar external-trimmed-${idv.version}.jar jogamp-all-${jogamp.version}.jar sysout-over-slf4j-${sysout.version}.jar miglayout-core-${miglayout.version}.jar miglayout-swing-${miglayout.version}.jar eventbus-${eventbus.version}.jar logback-core-${logback.version}.jar logback-classic-${logback.version}.jar log4j-over-slf4j-${slf4j.version}.jar slf4j-api-${slf4j.version}.jar ${local-idv.jarname}commons-math3-${commons-math.version}.jar rsyntaxtextarea-${rsyntaxtextarea.version}.jar jul-to-slf4j-${slf4j.version}.jar local-visad-${idv.version}.jar visad-${visad.version}.jar idv-${idv.version}.jar ${userguide.jarname} JSatTrak-${jsattrack.version}.jar swingx-common-${swingx.version}.jar j3dcore-${java3d.version}.jar j3dutils-${java3d.version}.jar vecmath-${java3d.version}.jar jython-standalone-${jython.version}.jar juniversalchardet-${juniversalchardet.version}.jar commons-httpclient-${commons-httpclient.version}.jar jcodec-javase-${jcodec.version}.jar jcodec-${jcodec.version}.jar flatlaf-${flatlaf.version}.jar flatlaf-extras-${flatlaf.version}.jar flatlaf-intellij-themes-${flatlaf.version}.jar flatlaf-swingx-${flatlaf.version}.jar batik-all-${batik.version}.jar batik-anim-${batik.version}.jar batik-awt-util-${batik.version}.jar batik-bridge-${batik.version}.jar batik-codec-${batik.version}.jar batik-constants-${batik.version}.jar batik-css-${batik.version}.jar batik-dom-${batik.version}.jar batik-ext-${batik.version}.jar batik-extension-${batik.version}.jar batik-gui-util-${batik.version}.jar batik-gvt-${batik.version}.jar batik-i18n-${batik.version}.jar batik-parser-${batik.version}.jar batik-script-${batik.version}.jar batik-shared-resources-${batik.version}.jar batik-svg-dom-${batik.version}.jar batik-svgbrowser-${batik.version}.jar batik-svggen-${batik.version}.jar batik-svgrasterizer-${batik.version}.jar batik-swing-${batik.version}.jar batik-test-${batik.version}.jar batik-test-old-${batik.version}.jar batik-test-svg-${batik.version}.jar batik-test-swing-${batik.version}.jar batik-transcoder-${batik.version}.jar batik-util-${batik.version}-tests.jar batik-util-${batik.version}.jar batik-xml-${batik.version}.jar external-trimmed-5.7.jar fop-transcoder-allinone-2.7.jar rhino-1.7.7.jar serializer-2.7.2.jar xml-apis-1.4.01.jar xml-apis-ext-1.3.04.jar xmlgraphics-commons-2.7.jar" />-->
+    <property name="jar.base.classpath" value="${userguide.jarname} ncIdv-${ncidv.version}.jar external-trimmed-${idv.version}.jar jogamp-all-${jogamp.version}.jar sysout-over-slf4j-${sysout.version}.jar miglayout-core-${miglayout.version}.jar miglayout-swing-${miglayout.version}.jar eventbus-${eventbus.version}.jar logback-core-${logback.version}.jar logback-classic-${logback.version}.jar log4j-over-slf4j-${slf4j.version}.jar slf4j-api-${slf4j.version}.jar ${local-idv.jarname}commons-math3-${commons-math.version}.jar rsyntaxtextarea-${rsyntaxtextarea.version}.jar jul-to-slf4j-${slf4j.version}.jar local-visad-${idv.version}.jar visad-${visad.version}.jar idv-${idv.version}.jar ${userguide.jarname} JSatTrak-${jsattrack.version}.jar swingx-common-${swingx.version}.jar j3dcore-${java3d.version}.jar j3dutils-${java3d.version}.jar vecmath-${java3d.version}.jar jython-standalone-${jython.version}.jar juniversalchardet-${juniversalchardet.version}.jar commons-httpclient-${commons-httpclient.version}.jar jcodec-javase-${jcodec.version}.jar jcodec-${jcodec.version}.jar flatlaf-${flatlaf.version}.jar flatlaf-extras-${flatlaf.version}.jar flatlaf-intellij-themes-${flatlaf.version}.jar flatlaf-swingx-${flatlaf.version}.jar batik-all-${batik.version}.jar batik-anim-${batik.version}.jar batik-awt-util-${batik.version}.jar batik-bridge-${batik.version}.jar batik-codec-${batik.version}.jar batik-constants-${batik.version}.jar batik-css-${batik.version}.jar batik-dom-${batik.version}.jar batik-ext-${batik.version}.jar batik-extension-${batik.version}.jar batik-gui-util-${batik.version}.jar batik-gvt-${batik.version}.jar batik-i18n-${batik.version}.jar batik-parser-${batik.version}.jar batik-script-${batik.version}.jar batik-shared-resources-${batik.version}.jar batik-svg-dom-${batik.version}.jar batik-svgbrowser-${batik.version}.jar batik-svggen-${batik.version}.jar batik-svgrasterizer-${batik.version}.jar batik-swing-${batik.version}.jar batik-test-${batik.version}.jar batik-test-old-${batik.version}.jar batik-test-svg-${batik.version}.jar batik-test-swing-${batik.version}.jar batik-transcoder-${batik.version}.jar batik-util-${batik.version}-tests.jar batik-util-${batik.version}.jar batik-xml-${batik.version}.jar external-trimmed-5.7.jar fop-transcoder-allinone-2.7.jar rhino-1.7.7.jar serializer-2.7.2.jar xml-apis-1.4.01.jar xml-apis-ext-1.3.04.jar xmlgraphics-commons-2.7.jar" />
 
     <!-- List of McIDAS-V JAR files. 
          Note: if you're going to modify this fileset, be sure to make similar
@@ -228,6 +230,41 @@
         <include name="flatlaf-extras-${flatlaf.version}.jar" />
         <include name="flatlaf-intellij-themes-${flatlaf.version}.jar" />
         <include name="flatlaf-swingx-${flatlaf.version}.jar" />
+        <include name="batik-all-${batik.version}.jar" />
+        <include name="batik-anim-${batik.version}.jar" />
+        <include name="batik-awt-util-${batik.version}.jar" />
+        <include name="batik-bridge-${batik.version}.jar" />
+        <include name="batik-codec-${batik.version}.jar" />
+        <include name="batik-constants-${batik.version}.jar" />
+        <include name="batik-css-${batik.version}.jar" />
+        <include name="batik-dom-${batik.version}.jar" />
+        <include name="batik-ext-${batik.version}.jar" />
+        <include name="batik-extension-${batik.version}.jar" />
+        <include name="batik-gui-util-${batik.version}.jar" />
+        <include name="batik-gvt-${batik.version}.jar" />
+        <include name="batik-i18n-${batik.version}.jar" />
+        <include name="batik-parser-${batik.version}.jar" />
+        <include name="batik-script-${batik.version}.jar" />
+        <include name="batik-shared-resources-${batik.version}.jar" />
+        <include name="batik-svg-dom-${batik.version}.jar" />
+        <include name="batik-svgbrowser-${batik.version}.jar" />
+        <include name="batik-svggen-${batik.version}.jar" />
+        <include name="batik-svgrasterizer-${batik.version}.jar" />
+        <include name="batik-swing-${batik.version}.jar" />
+        <include name="batik-test-${batik.version}.jar" />
+        <include name="batik-test-old-${batik.version}.jar" />
+        <include name="batik-test-svg-${batik.version}.jar" />
+        <include name="batik-test-swing-${batik.version}.jar" />
+        <include name="batik-transcoder-${batik.version}.jar" />
+        <include name="batik-util-${batik.version}-tests.jar" />
+        <include name="batik-util-${batik.version}.jar" />
+        <include name="batik-xml-${batik.version}.jar" />
+        <include name="fop-transcoder-allinone-2.7.jar" />
+        <include name="rhino-1.7.7.jar" />
+        <include name="serializer-2.7.2.jar" />
+        <include name="xml-apis-1.4.01.jar" />
+        <include name="xml-apis-ext-1.3.04.jar" />
+        <include name="xmlgraphics-commons-2.7.jar" />
         <include name="jcodec-${jcodec.version}.jar" />
         <include name="jcodec-javase-${jcodec.version}.jar" />
         <include name="commons-httpclient-${commons-httpclient.version}.jar" />
@@ -265,7 +302,7 @@
         <include name="auxdata-${idv.version}.jar" />
         <include name="local-visad-${idv.version}.jar" />
         <include name="visad-${visad.version}.jar" />
-        <include name="external-${idv.version}.jar" />
+        <include name="external-trimmed-${idv.version}.jar" />
         <include name="idv-${idv.version}.jar" />
     </fileset>
     
