Implement Bob's suggestions for geo by ref warning
Had *completely* forgotten about mcidasv.properties; this one took
longer to track down than I'd like to admit. :(

[2532]

--- a/edu/wisc/ssec/mcidasv/resources/mcidasv.properties
+++ b/edu/wisc/ssec/mcidasv/resources/mcidasv.properties
@@ -8,7 +8,7 @@ visad.actionimpl.tracetime=false
 visad.actionimpl.tracestack=false
 visad.cachingcoordinatesystem.debugtime=false
 visad.java3d.textureNpot=false
-visad.java3d.geometryByRef=true
+#visad.java3d.geometryByRef=true
 
 visad.data.arraycache.enabled=true
 visad.data.arraycache.usedatacachemanager = true
