--- a/build.xml
+++ b/build.xml
@@ -207,7 +207,7 @@
     <property name="slf4j.version" value="2.0.0" />
     <property name="logback.version" value="1.3.0" />
     <property name="miglayout.version" value="5.2" />
-    <property name="jogamp.version" value="2.4.0rc2-inq2551" />
+    <property name="jogamp.version" value="2.5.0" />
     <property name="swingx.version" value="1.6.5-1" />
     <property name="eventbus.version" value="1.4" />
     <property name="commons-math.version" value="3.6.1" />
