--- a/build.xml
+++ b/build.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 
 <!-- $Id$ -->
-<project name="mcidasv" default="info">
+<project name="mcidasv" default="info" xmlns:if="ant:if">
 
     <!-- Directory definitions -->
     <property name="base.dir" location="." />
@@ -99,6 +99,15 @@
     </condition>
     <!-- end of userpath stuff -->
 
+    <!--
+      check to see if we should pass -Xdock:name JVM argument.
+      This argument causes the JVM to error on platforms other than macOS!
+      Used in the jar.runlarge and jar.runlarge.jpms targets.
+     -->
+    <condition property="build.macos" value="true">
+        <os family="mac" />
+    </condition>
+    <!-- end dock jvm arg handling -->
 
     <!-- Attempt to load the version property file -->
     <property file="${resource.dir}/version.properties" />
@@ -234,14 +243,17 @@
     <!-- The CLASSPATH specified within McV's manifest 
          Note: if you're going to modify this property, be sure to make similar
          modifications to the "mcv.libs" fileset. -->
-<!--    <property name="jar.base.classpath" value="jansi-${jansi.version}.jar ${userguide.jarname} ncIdv-${ncidv.version}.jar external-trimmed-${idv.version}.jar jogamp-all-${jogamp.version}.jar sysout-over-slf4j-${sysout.version}.jar miglayout-core-${miglayout.version}.jar miglayout-swing-${miglayout.version}.jar eventbus-${eventbus.version}.jar logback-core-${logback.version}.jar logback-classic-${logback.version}.jar log4j-over-slf4j-${slf4j.version}.jar slf4j-api-${slf4j.version}.jar ${local-idv.jarname}commons-math3-${commons-math.version}.jar rsyntaxtextarea-${rsyntaxtextarea.version}.jar jul-to-slf4j-${slf4j.version}.jar local-visad-${idv.version}.jar visad-${visad.version}.jar idv-${idv.version}.jar ${userguide.jarname} JSatTrak-${jsattrack.version}.jar swingx-common-${swingx.version}.jar j3dcore-${java3d.version}.jar j3dutils-${java3d.version}.jar vecmath-${java3d.version}.jar jython-standalone-${jython.version}.jar juniversalchardet-${juniversalchardet.version}.jar commons-httpclient-${commons-httpclient.version}.jar jcodec-javase-${jcodec.version}.jar jcodec-${jcodec.version}.jar flatlaf-${flatlaf.version}.jar flatlaf-extras-${flatlaf.version}.jar flatlaf-intellij-themes-${flatlaf.version}.jar flatlaf-swingx-${flatlaf.version}.jar batik-all-${batik.version}.jar batik-anim-${batik.version}.jar batik-awt-util-${batik.version}.jar batik-bridge-${batik.version}.jar batik-codec-${batik.version}.jar batik-constants-${batik.version}.jar batik-css-${batik.version}.jar batik-dom-${batik.version}.jar batik-ext-${batik.version}.jar batik-extension-${batik.version}.jar batik-gui-util-${batik.version}.jar batik-gvt-${batik.version}.jar batik-i18n-${batik.version}.jar batik-parser-${batik.version}.jar batik-script-${batik.version}.jar batik-shared-resources-${batik.version}.jar batik-svg-dom-${batik.version}.jar batik-svgbrowser-${batik.version}.jar batik-svggen-${batik.version}.jar batik-svgrasterizer-${batik.version}.jar batik-swing-${batik.version}.jar batik-test-${batik.version}.jar batik-test-old-${batik.version}.jar batik-test-svg-${batik.version}.jar batik-test-swing-${batik.version}.jar batik-transcoder-${batik.version}.jar batik-util-${batik.version}-tests.jar batik-util-${batik.version}.jar batik-xml-${batik.version}.jar external-trimmed-5.7.jar fop-transcoder-allinone-2.7.jar rhino-1.7.7.jar serializer-2.7.2.jar xml-apis-1.4.01.jar xml-apis-ext-1.3.04.jar xmlgraphics-commons-2.7.jar" />-->
+<!--    <property name="jar.base.classpath" value="jansi-${jansi.version}.jar ${userguide.jarname} ncIdv-${ncidv.version}.jar external-trimmed-${idv.version}.jar jogamp-all-${jogamp.version}.jar sysout-over-slf4j-${sysout.version}.jar miglayout-core-${miglayout.version}.jar miglayout-swing-${miglayout.version}.jar eventbus-${eventbus.version}.jar logback-core-${logback.version}.jar logback-classic-${logback.version}.jar log4j-over-slf4j-${slf4j.version}.jar slf4j-api-${slf4j.version}.jar ${local-idv.jarname}commons-math3-${commons-math.version}.jar rsyntaxtextarea-${rsyntaxtextarea.version}.jar jul-to-slf4j-${slf4j.version}.jar local-visad-${idv.version}.jar visad-${visad.version}.jar idv-${idv.version}.jar ${userguide.jarname} JSatTrak-${jsattrack.version}.jar swingx-common-${swingx.version}.jar j3dcore-${java3d.version}.jar j3dutils-${java3d.version}.jar vecmath-${java3d.version}.jar jython-standalone-${jython.version}.jar juniversalchardet-${juniversalchardet.version}.jar commons-httpclient-${commons-httpclient.version}.jar jcodec-javase-${jcodec.version}.jar jcodec-${jcodec.version}.jar flatlaf-${flatlaf.version}.jar flatlaf-extras-${flatlaf.version}.jar flatlaf-intellij-themes-${flatlaf.version}.jar flatlaf-swingx-${flatlaf.version}.jar batik-all-${batik.version}.jar batik-anim-${batik.version}.jar batik-awt-util-${batik.version}.jar batik-bridge-${batik.version}.jar batik-codec-${batik.version}.jar batik-constants-${batik.version}.jar batik-css-${batik.version}.jar batik-dom-${batik.version}.jar batik-ext-${batik.version}.jar batik-extension-${batik.version}.jar batik-gui-util-${batik.version}.jar batik-gvt-${batik.version}.jar batik-i18n-${batik.version}.jar batik-parser-${batik.version}.jar batik-script-${batik.version}.jar batik-shared-resources-${batik.version}.jar batik-svg-dom-${batik.version}.jar batik-svgbrowser-${batik.version}.jar batik-svggen-${batik.version}.jar batik-svgrasterizer-${batik.version}.jar batik-swing-${batik.version}.jar batik-test-${batik.version}.jar batik-test-old-${batik.version}.jar batik-test-svg-${batik.version}.jar batik-test-swing-${batik.version}.jar batik-transcoder-${batik.version}.jar batik-util-${batik.version}-tests.jar batik-util-${batik.version}.jar batik-xml-${batik.version}.jar external-trimmed-5.7.jar fop-transcoder-allinone-2.7.jar rhino-1.7.7.jar serializer-2.7.2.jar xml-apis-1.4.01.jar xml-apis-ext-1.3.04.jar xmlgraphics-commons-2.7.jar orange-extensions-1.1-SNAPSHOT.jar" />-->
     <property name="jar.base.classpath" value="${userguide.jarname} ncIdv-${ncidv.version}.jar external-trimmed-${idv.version}.jar jogamp-all-${jogamp.version}.jar sysout-over-slf4j-${sysout.version}.jar miglayout-core-${miglayout.version}.jar miglayout-swing-${miglayout.version}.jar eventbus-${eventbus.version}.jar logback-core-${logback.version}.jar logback-classic-${logback.version}.jar log4j-over-slf4j-${slf4j.version}.jar slf4j-api-${slf4j.version}.jar ${local-idv.jarname}commons-math3-${commons-math.version}.jar rsyntaxtextarea-${rsyntaxtextarea.version}.jar jul-to-slf4j-${slf4j.version}.jar local-visad-${idv.version}.jar visad-${visad.version}.jar idv-${idv.version}.jar ${userguide.jarname} JSatTrak-${jsattrack.version}.jar swingx-common-${swingx.version}.jar j3dcore-${java3d.version}.jar j3dutils-${java3d.version}.jar vecmath-${java3d.version}.jar jython-standalone-${jython.version}.jar juniversalchardet-${juniversalchardet.version}.jar commons-httpclient-${commons-httpclient.version}.jar jcodec-javase-${jcodec.version}.jar jcodec-${jcodec.version}.jar flatlaf-${flatlaf.version}.jar flatlaf-extras-${flatlaf.version}.jar flatlaf-intellij-themes-${flatlaf.version}.jar flatlaf-swingx-${flatlaf.version}.jar batik-all-${batik.version}.jar batik-anim-${batik.version}.jar batik-awt-util-${batik.version}.jar batik-bridge-${batik.version}.jar batik-codec-${batik.version}.jar batik-constants-${batik.version}.jar batik-css-${batik.version}.jar batik-dom-${batik.version}.jar batik-ext-${batik.version}.jar batik-extension-${batik.version}.jar batik-gui-util-${batik.version}.jar batik-gvt-${batik.version}.jar batik-i18n-${batik.version}.jar batik-parser-${batik.version}.jar batik-script-${batik.version}.jar batik-shared-resources-${batik.version}.jar batik-svg-dom-${batik.version}.jar batik-svgbrowser-${batik.version}.jar batik-svggen-${batik.version}.jar batik-svgrasterizer-${batik.version}.jar batik-swing-${batik.version}.jar batik-test-${batik.version}.jar batik-test-old-${batik.version}.jar batik-test-svg-${batik.version}.jar batik-test-swing-${batik.version}.jar batik-transcoder-${batik.version}.jar batik-util-${batik.version}-tests.jar batik-util-${batik.version}.jar batik-xml-${batik.version}.jar external-trimmed-5.7.jar fop-transcoder-allinone-2.7.jar rhino-1.7.7.jar serializer-2.7.2.jar xml-apis-1.4.01.jar xml-apis-ext-1.3.04.jar xmlgraphics-commons-2.7.jar" />
 
     <!-- List of McIDAS-V JAR files. 
          Note: if you're going to modify this fileset, be sure to make similar
          modifications to the "jar.base.classpath" property. -->
     <fileset id="mcv.libs" dir="${dist.dir}">
-<!--        <include name="jansi-${jansi.version}.jar" />-->
+<!--
+        <include name="jansi-${jansi.version}.jar" />
+        <include name="orange-extensions-1.1-SNAPSHOT.jar" />
+-->
         <include name="flatlaf-${flatlaf.version}.jar" />
         <include name="flatlaf-extras-${flatlaf.version}.jar" />
         <include name="flatlaf-intellij-themes-${flatlaf.version}.jar" />
@@ -834,6 +846,8 @@
       <jvmarg value="-XX:+HeapDumpOnOutOfMemoryError" />
       <jvmarg value="-XX:HeapDumpPath=${heap.dir}" />
 
+      <jvmarg value="-Xdock:icon=../release/icons/mcidasv.icns" if:set="build.macos" />
+
       <!--
       <sysproperty key="debug.localadde.rootdir" value="${addeservers.dir}" />
       <sysproperty key="debug.adde.reqs" value="false" />
@@ -956,6 +970,7 @@
 <!--      <jvmarg value="-Xlog:gc" />-->
       <jvmarg value="-XX:+HeapDumpOnOutOfMemoryError" />
       <jvmarg value="-XX:HeapDumpPath=${heap.dir}" />
+      <jvmarg value="-Xdock:icon=../release/icons/mcidasv.icns" if:set="build.macos" />
 
       <sysproperty key="sun.java2d.uiScale" value="${uiscale}" />
       <sysproperty key="loglevel" value="${run.log.level}" />
