--- a/edu/wisc/ssec/mcidasv/resources/version.properties
+++ b/edu/wisc/ssec/mcidasv/resources/version.properties
@@ -1,5 +1,5 @@
-mcidasv.version.major = 1
-mcidasv.version.minor = 9
-mcidasv.version.release = 
+mcidasv.version.major = 2
+mcidasv.version.minor = 0
+mcidasv.version.release = beta1
 mcidasv.build.date = @DATE@ @NIGHTLY@
 mcidasv.copyright.year = 2007-2023
