--- a/build.xml
+++ b/build.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 
 <!-- $Id$ -->
-<project name="mcidasv" default="info" xmlns:if="ant:if">
+<project name="mcidasv" default="info" xmlns:if="ant:if" xmlns:unless="ant:unless">
 
     <!-- Directory definitions -->
     <property name="base.dir" location="." />
@@ -897,11 +897,11 @@
       <jvmarg value="--illegal-access=warn" />
       <!-- add-exports allows reading from public types -->
       <jvmarg value="--add-exports" />
-      <jvmarg value="java.base/com.sun.net.ssl.internal.ssl=ALL-UNNAMED" />
-      <jvmarg value="--add-exports" />
       <jvmarg value="java.base/jdk.internal.loader=ALL-UNNAMED" />
-      <jvmarg value="--add-exports" />
-      <jvmarg value="java.desktop/com.sun.java.swing.plaf.gtk=ALL-UNNAMED" />
+      <jvmarg value="--add-exports" unless:set="build.macos" />
+      <jvmarg value="java.desktop/com.sun.java.swing.plaf.gtk=ALL-UNNAMED" unless:set="build.macos" />
+      <jvmarg value="--add-exports" if:set="build.macos" />
+      <jvmarg value="java.desktop/com.apple.eawt=ALL-UNNAMED" if:set="build.macos" />
       <jvmarg value="--add-exports" />
       <jvmarg value="java.desktop/sun.awt=ALL-UNNAMED" />
       <jvmarg value="--add-exports" />
@@ -1012,11 +1012,9 @@
             <jvmarg value="--illegal-access=warn" />
             <!-- add-exports allows reading from public types -->
             <jvmarg value="--add-exports" />
-            <jvmarg value="java.base/com.sun.net.ssl.internal.ssl=ALL-UNNAMED" />
-            <jvmarg value="--add-exports" />
             <jvmarg value="java.base/jdk.internal.loader=ALL-UNNAMED" />
-            <jvmarg value="--add-exports" />
-            <jvmarg value="java.desktop/com.sun.java.swing.plaf.gtk=ALL-UNNAMED" />
+            <jvmarg value="--add-exports" unless:set="build.macos" />
+            <jvmarg value="java.desktop/com.sun.java.swing.plaf.gtk=ALL-UNNAMED" unless:set="build.macos" />
             <jvmarg value="--add-exports" />
             <jvmarg value="java.desktop/sun.awt=ALL-UNNAMED" />
             <jvmarg value="--add-exports" />
@@ -1583,7 +1581,7 @@
             <arg value="-D" />
             <arg value="IDV_VERSION=${idv.version}" />
             <arg value="--win-keystore-password=${windows.keystore}" />
-            <arg value="--build-ids=8,7720,7557,9055,9022" />
+            <arg value="--build-ids=9644,9652" />
             <arg value="mcidasv.install4j" />
         </exec>
     </target>
@@ -1611,7 +1609,7 @@
               file.
             -->
             <arg value="--apple-id-password=${notarization.password}" />
-            <arg value="--build-ids=12" />
+            <arg value="--build-ids=9621,9631" />
             <arg value="mcidasv.install4j" />
         </exec>
     </target>
